kubernetes/apps/hydra/webscan/service-webscan.yaml
apiVersion: v1
kind: Service
metadata:
  name: webscan
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: webscan
