kubernetes/apps/hydra/webscan/httpRoute-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webscan-http
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateways
  hostnames:
  - webscan.thetillhoff.de
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webscan
      port: 80
  # # Redirect to https:
  # - filters:
  #   - type: RequestRedirect
  #     requestRedirect:
  #       scheme: https
  #       statusCode: 301
